revised: changes due to Maven/Java warnings (actual versions)